--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,7 +44,7 @@
   position: fixed;
   top: 0;
   background-color: #000000ba;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
   color: aliceblue;
